tests/snapshots/config_fixtures__all_fields.snap
---
source: src/config.rs
assertion_line: 636
expression: snapshot
---
server:
  host: 0.0.0.0
  port: 8080
upstream:
  openai_base_url: "https://custom.api.com"
  anthropic_base_url: "https://custom.anthropic.com"
  anthropic_version: 2024-01-01
  minimax_base_url: "https://api.minimax.io"
keys:
  - virtual_key: vk-1
    real_key: sk-real-1
    provider: openai
    auth: static
  - virtual_key: vk-2
    real_key: sk-real-2
    provider: anthropic
    auth: static
  - virtual_key: vk-3
    real_key: sk-real-3
    provider: minimax
    auth: static
dlp:
  patterns:
    - name: ssn
      regex: "\\b\\d{3}-\\d{2}-\\d{4}\\b"
      action: block
    - name: email
      regex: "\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}\\b"
      action: redact
  scan_responses: true
stats:
  persist_path: /var/lib/clawshell/stats.json
log_level: debug
derived:
  listen_addr: "0.0.0.0:8080"
  openai_upstream_url: "https://custom.api.com"
  anthropic_upstream_url: "https://custom.anthropic.com"
  key_map:
    vk-1:
      - sk-real-1
      - openai
    vk-2:
      - sk-real-2
      - anthropic
    vk-3:
      - sk-real-3
      - minimax
