tests/snapshots/config_fixtures__empty_base_url.snap
---
source: src/config.rs
expression: snapshot
---
server:
  host: 127.0.0.1
  port: 18790
upstream:
  openai_base_url: ""
  anthropic_base_url: ~
  anthropic_version: 2023-06-01
keys: []
dlp:
  patterns: []
  scan_responses: true
stats:
  persist_path: /etc/clawshell/stats.json
log_level: info
derived:
  listen_addr: "127.0.0.1:18790"
  openai_upstream_url: ""
  anthropic_upstream_url: "https://api.anthropic.com"
  key_map: {}
