tests/snapshots/config_fixtures__empty_host.snap
---
source: tests/config_fixtures.rs
expression: snapshot
---
server:
  host: ""
  port: 18790
upstream:
  base_url: "https://api.openai.com"
  anthropic_base_url: ~
  anthropic_version: 2023-06-01
keys: []
dlp:
  patterns: []
  scan_responses: true
log_level: info
derived:
  listen_addr: ":18790"
  openai_upstream_url: "https://api.openai.com"
  anthropic_upstream_url: "https://api.anthropic.com"
  key_map: {}
