tests/snapshots/config_fixtures__missing_server.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 1, column 1
  |
1 | [upstream]
  | ^
missing field `server`
