tests/snapshots/config_fixtures__missing_upstream.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 1, column 1
  |
1 | [server]
  | ^
missing field `upstream`
